webkit crashes on debug builds when running IETC flexbox-ordinal-group-001.htm https://bugs.webkit.org/show_bug.cgi?id=85832

Reviewed by Ojan Vafai.

Source/WebCore:

We were using a HashSet<unsigned>, which can't hold the value of 0.
According to the spec, 0 isn't a valid value, so at CSS parse time,
reject the value 0. This lets us pass the test, although that's kind
of by accident.

We could allow 0 for box-ordinal-group, but there are some perf implications
to having allowing a value below the initial value (1 in this case).

We still allow 0 for box-flex-group, because that's what the existing code
does and there are tests expecting this behavior.

No new tests, covered by ietestcenter/css3/flexbox/flexbox-ordinal-group-001.htm
which was crashing.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue): Reject 0 for -webkit-box-ordinal-group.

LayoutTests:

* platform/chromium/TestExpectations: Remove test that passes.
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/Skipped:


Canonical link: https://commits.webkit.org/106275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119620 268f45cc-cd09-0410-ab3c-d52691b4dbfc